--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.github.tomcat-slf4j-logback</groupId>
     <artifactId>tomcat10-slf4j-logback</artifactId>
-    <version>10.0.0-M11-SNAPSHOT</version>
+    <version>10.0.0-SNAPSHOT</version>
 
     <name>tomcat10-slf4j-logback</name>
     <description>Tomcat10 Slf4j Logback Integration</description>
@@ -58,7 +58,7 @@
 
     <properties>
         <config.version>1.1.2</config.version>
-        <tomcat.version>10.0.0-M10</tomcat.version>
+        <tomcat.version>10.0.0</tomcat.version>
 
         <!-- Override for Jdk8 Versions -->
         <logback.version>1.3.0-alpha5</logback.version>
