--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,9 @@
         <config.version>1.2.2</config.version>
         <tomcat.version>10.1.0</tomcat.version>
 
-        <!-- Override for Jdk8 Versions -->
-        <logback.version>1.3.0-alpha5</logback.version>
-        <slf4j.version>2.0.0-alpha1</slf4j.version>
+        <!-- Override for Latest Versions -->
+        <logback.version>1.3.1</logback.version>
+        <slf4j.version>2.0.3</slf4j.version>
     </properties>
 
     <dependencies>
