--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <java.release.version>11</java.release.version>
 
         <!-- Config and Tomcat Versions -->
-        <config.version>1.4.0-SNAPSHOT</config.version>
+        <config.version>1.4.0</config.version>
         <tomcat.version>10.1.13</tomcat.version>
 
         <!-- Override for Latest Versions -->
