--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
         <logback.version>1.4.11</logback.version>
         <slf4j.version>2.0.9</slf4j.version>
 
-        <!-- Logstash Encoder and deps versions -->
-        <logstash.version>7.4</logstash.version>
+        <!-- Logstash Json Encoder -->
         <jackson.version>2.15.2</jackson.version>
+        <logstash.version>7.4</logstash.version>
     </properties>
 
     <dependencies>
@@ -132,25 +132,29 @@
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
             <version>${logstash.version}</version>
+            <scope>compile</scope>
             <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
+            <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
+            <scope>compile</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
+            <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
+            <scope>compile</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+            <scope>compile</scope>
             <optional>true</optional>
         </dependency>
     </dependencies>
@@ -203,20 +207,22 @@
                                     <include>org.slf4j:slf4j-api</include>
                                     <include>ch.qos.logback:logback-classic</include>
                                     <include>ch.qos.logback:logback-core</include>
+
+                                    <!-- Logstash Dependencies -->
+                                    <include>com.fasterxml.jackson.core:jackson-annotations</include>
                                     <include>com.fasterxml.jackson.core:jackson-core</include>
                                     <include>com.fasterxml.jackson.core:jackson-databind</include>
-                                    <include>com.fasterxml.jackson.core:jackson-annotations</include>
                                     <include>net.logstash.logback:logstash-logback-encoder</include>
                                 </includes>
                             </artifactSet>
 
                             <filters>
+                                <!-- Include items from tomcat juli -->
                                 <filter>
                                     <artifact>org.apache.tomcat:tomcat-juli</artifact>
                                     <includes>
                                         <include>org/apache/juli/ClassLoaderLogManager**</include>
                                         <include>org/apache/juli/WebappProperties.class</include>
-                                        <include>META-INF/NOTICE</include>
                                     </includes>
                                 </filter>
 
@@ -236,6 +242,14 @@
                                     </excludes>
                                 </filter>
 
+                                <!-- Exclude licenses as separately handled -->
+                                <filter>
+                                    <artifact>org.slf4j:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/LICENSE.txt</exclude>
+                                    </excludes>
+                                </filter>
+
                                 <!-- Exclude manifests as we include our own -->
                                 <filter>
                                     <artifact>org.slf4j:*</artifact>
@@ -264,20 +278,44 @@
                                 <filter>
                                     <artifact>ch.qos.logback:*</artifact>
                                     <excludes>
-                                        <exclude>module-info.*</exclude>
+                                        <exclude>META-INF/versions/9/module-info.class</exclude>
                                     </excludes>
                                 </filter>
 
+                                <!-- Exclude licenses as separately handled -->
+                                <filter>
+                                    <artifact>com.fasterxml*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/LICENSE</exclude>
+                                    </excludes>
+                                </filter>
+
+                                <!-- Exclude manifests as we include our own -->
                                 <filter>
                                     <artifact>com.fasterxml*:*</artifact>
                                     <excludes>
                                         <exclude>META-INF/MANIFEST.MF</exclude>
+                                    </excludes>
+                                </filter>
+
+                                <!-- Exclude notices as separately handled -->
+                                <filter>
+                                    <artifact>com.fasterxml*:*</artifact>
+                                    <excludes>
                                         <exclude>META-INF/NOTICE</exclude>
-                                        <exclude>META-INF/LICENSE</exclude>
+                                    </excludes>
+                                </filter>
+
+                                <!-- Exclude module info as conflicting and we are not using (we require java 8 as a baseline) -->
+                                <filter>
+                                    <artifact>com.fasterxml*:*</artifact>
+                                    <excludes>
+                                        <exclude>module-info.*</exclude>
                                         <exclude>META-INF/versions/9/module-info.class</exclude>
                                     </excludes>
                                 </filter>
 
+                                <!-- Exclude manifests as we include our own -->
                                 <filter>
                                     <artifact>net.logstash.logback:logstash-logback-encoder</artifact>
                                     <excludes>
@@ -318,6 +356,12 @@
                                 </relocation>
 
                                 <relocation>
+                                    <pattern>com/fasterxml</pattern>
+                                    <shadedPattern>org/apache/juli/logging/com/fasterxml</shadedPattern>
+                                    <rawString>true</rawString>
+                                </relocation>
+
+                                <relocation>
                                     <pattern>net.logstash.logback</pattern>
                                     <shadedPattern>org.apache.juli.logging.net.logstash.logback</shadedPattern>
                                 </relocation>
@@ -330,6 +374,10 @@
                                     <file>${project.basedir}/LICENSE</file>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>META-INF/LICENSE-jackson.txt</resource>
+                                    <file>${project.build.directory}/tomcat-slfj4-logback-config/assembly/LICENSE-jackson.txt</file>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                                     <resource>META-INF/LICENSE-logback.txt</resource>
                                     <file>${project.build.directory}/tomcat-slfj4-logback-config/assembly/LICENSE-logback.txt</file>
                                 </transformer>
@@ -340,6 +388,15 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
                                     <resource>META-INF/LICENSE-tomcat.txt</resource>
                                     <file>${project.build.directory}/tomcat-slfj4-logback-config/assembly/LICENSE-tomcat.txt</file>
+                                </transformer>
+
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>META-INF/NOTICE-jackson.txt</resource>
+                                    <file>${project.build.directory}/tomcat-slfj4-logback-config/assembly/NOTICE-jackson.txt</file>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
+                                    <resource>META-INF/NOTICE-tomcat.txt</resource>
+                                    <file>${project.build.directory}/tomcat-slfj4-logback-config/assembly/NOTICE-tomcat.txt</file>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -365,6 +422,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
