--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.github.tomcat-slf4j-logback</groupId>
     <artifactId>tomcat10-slf4j-logback</artifactId>
-    <version>10.1.16</version>
+    <version>10.1.17-SNAPSHOT</version>
 
     <name>tomcat10-slf4j-logback</name>
     <description>Tomcat10 Slf4j Logback Integration</description>
@@ -53,7 +53,7 @@
         <connection>scm:git:ssh://git@github.com/tomcat-slf4j-logback/tomcat10-slf4j-logback.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/tomcat-slf4j-logback/tomcat10-slf4j-logback.git</developerConnection>
         <url>https://github.com/tomcat-slf4j-logback/tomcat10-slf4j-logback</url>
-        <tag>tomcat10-slf4j-logback-10.1.16</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
