[pom] Add todo hint for logback access group id change upcoming

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
         </dependency>
 
         <dependency>
+            <!-- TODO: Group id moving to 'cs.qos.logback-access' -->
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-access</artifactId>
             <version>${logback-access.version}</version>
