--- a/pom.xml
+++ b/pom.xml
@@ -325,7 +325,7 @@
                                     </excludes>
                                 </filter>
 
-                                <!-- Exclude module info as conflicting and we are not using (we require java 8 as a baseline) -->
+                                <!-- Exclude module info as conflicting and we are not using -->
                                 <filter>
                                     <artifact>org.slf4j:*</artifact>
                                     <excludes>
@@ -341,7 +341,7 @@
                                     </excludes>
                                 </filter>
 
-                                <!-- Exclude module info as conflicting and we are not using (we require java 8 as a baseline) -->
+                                <!-- Exclude module info as conflicting and we are not using -->
                                 <filter>
                                     <artifact>ch.qos.logback:*</artifact>
                                     <excludes>
@@ -351,7 +351,7 @@
 
                                 <!-- Exclude licenses as separately handled -->
                                 <filter>
-                                    <artifact>com.fasterxml*:*</artifact>
+                                    <artifact>com.fasterxml.jackson.core:*</artifact>
                                     <excludes>
                                         <exclude>META-INF/LICENSE</exclude>
                                     </excludes>
@@ -359,7 +359,7 @@
 
                                 <!-- Exclude manifests as we include our own -->
                                 <filter>
-                                    <artifact>com.fasterxml*:*</artifact>
+                                    <artifact>com.fasterxml.jackson.core:*</artifact>
                                     <excludes>
                                         <exclude>META-INF/MANIFEST.MF</exclude>
                                     </excludes>
@@ -367,15 +367,15 @@
 
                                 <!-- Exclude notices as separately handled -->
                                 <filter>
-                                    <artifact>com.fasterxml*:*</artifact>
+                                    <artifact>com.fasterxml.jackson.core:*</artifact>
                                     <excludes>
                                         <exclude>META-INF/NOTICE</exclude>
                                     </excludes>
                                 </filter>
 
-                                <!-- Exclude module info as conflicting and we are not using (we require java 8 as a baseline) -->
+                                <!-- Exclude module info as conflicting and we are not using -->
                                 <filter>
-                                    <artifact>com.fasterxml*:*</artifact>
+                                    <artifact>com.fasterxml.jackson.core:*</artifact>
                                     <excludes>
                                         <exclude>module-info.*</exclude>
                                         <exclude>META-INF/versions/9/module-info.class</exclude>
@@ -396,13 +396,20 @@
                                     <pattern>org.apache.commons.logging</pattern>
                                     <shadedPattern>org.apache.juli.logging</shadedPattern>
                                 </relocation>
+
                                 <relocation>
                                     <pattern>org.slf4j</pattern>
                                     <shadedPattern>org.apache.juli.logging.org.slf4j</shadedPattern>
                                 </relocation>
+
                                 <relocation>
                                     <pattern>ch.qos.logback</pattern>
                                     <shadedPattern>org.apache.juli.logging.ch.qos.logback</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>ch/qos/logback</pattern>
+                                    <shadedPattern>org/apache/juli/logging/ch/qos/logback</shadedPattern>
+                                    <rawString>true</rawString>
                                 </relocation>
 
                                 <!-- Located in org.apache.juli.logging.ch.qos.logback.classic.util.ContextInitializer -->
