--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>com.github.tomcat-slf4j-logback</groupId>
     <artifactId>tomcat10-slf4j-logback</artifactId>
-    <version>10.1.52</version>
+    <version>10.1.53-SNAPSHOT</version>
 
     <name>tomcat10-slf4j-logback</name>
     <description>Tomcat10 Slf4j Logback Integration</description>
@@ -90,7 +90,7 @@
     <scm>
         <connection>scm:git:ssh://git@github.com/tomcat-slf4j-logback/tomcat10-slf4j-logback.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/tomcat-slf4j-logback/tomcat10-slf4j-logback.git</developerConnection>
-        <tag>tomcat10-slf4j-logback-10.1.52</tag>
+        <tag>HEAD</tag>
         <url>https://github.com/tomcat-slf4j-logback/tomcat10-slf4j-logback</url>
     </scm>
 
